# ncOPT

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  example_rosenbrock.py  pyproject.toml  requirements.txt  sqp_pytorch.py  test_rosenbrock.py  train_max_fun.py
.github/workflows/: build.yml  main.yml  unit_tests.yml
data/checkpoints/: README.md  max2d.pt
data/img/: README.md
dev/: debug_sp_class.py
examples/: example_checkpoint.py  example_residual.py  example_rosenbrock.py
ncopt/: funs.py  rosenbrock.py  sqp_gs.py  sqp_gs_old.py  sqpgs.py  torch_obj.py  utils.py
ncopt/sqpgs/: __init__.py  defaults.py  main.py
ncopt/tests/: test_jacobians.py  test_rosenbrock.py
scripts/: compute_jacobian.py  example_residual.py  timing_rosenbrock.py  train_max_fun.py
src/ncopt/: funs.py  plot_utils.py  sqpgs.py  torch_obj.py  utils.py
src/ncopt/functions/: __init__.py  main.py  max_linear.py  norm_residual.py  quadratic.py  rosenbrock.py
src/ncopt/sqpgs/: README.md  __init__.py  cvxpy_subproblem.py  defaults.py  main.py  osqp_subproblem.py
tests/: test_functions.py  test_jacobians.py  test_quadratic.py  test_rosenbrock.py  test_subproblem.py
